Fixed readme formatting, added todos, reminders, and debugging function.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
+  <!-- TODO: choose person/thing/something to tribute -->
+    <!--
+      tribute options:
+        - bruce
+          - hard to make a color scheme fit with irl photos
+        - privacy awareness
+        - internet literacy
+        - using your blinker when turning
+        - open source material
+        - 
+    -->
+  <!-- TODO: brainstorm layout/are we supposed to copy wireframe? -->
+
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +25,9 @@
 
   <body>
     <main id="page">
+
+      <!-- TODO: setup grid layout -->
+      <!-- TODO: setup flex layout(s) inside grid -->
 
     </main>
   </body>
