Imported css resource. Started coding basic layout. Added resources.txt.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
-  <!-- TODO: choose person/thing/something to tribute -->
-    <!--
-      tribute options:
-        - bruce
-          - hard to make a color scheme fit with irl photos
-        - privacy awareness
-        - internet literacy
-        - using your blinker when turning
-        - open source material
-        - 
-    -->
-  <!-- TODO: brainstorm layout/are we supposed to copy wireframe? -->
-
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,11 +10,79 @@
   </head>
 
   <body>
-    <main id="page">
+    <main class="page">
 
-      <!-- TODO: setup grid layout -->
-      <!-- TODO: setup flex layout(s) inside grid -->
+      <!-- TODO: topic: bruce vs using blinkers? -->
+      <section class="grid-container">
+        <div class="grid-item" id="header">
+        <!-- links, class, general navigation -->
+        <!-- class, project -->
+          <ul class="h-list">
+            <li class="h-list-item class">
+              <p>Lorem</p>
+            </li>
+            <!--
+            <li class="h-list-item divider">
+              <p>|</p>
+            </li>
+            -->
+            <li class="h-list-item project">
+              <p>Ipsum</p>
+            </li>
+          </ul>
+        </div>
 
+        <div class="grid-item" id="proposition">
+        <!-- image, "title" area, should include a smaller sub-title, all on top of image -->
+
+        </div>
+
+        <div class="grid-item" id="reasons">
+        <!-- reasons to be described in depth in "content" -->
+          <section class="flex-container reasons">
+            <div class="reason r-one">
+
+            </div>
+
+            <div class="reason r-two">
+
+            </div>
+
+            <div class="reason r-three">
+
+            </div>
+          </section>
+        </div>
+
+        <div class="grid-item" id="content">
+        <!-- image, reason headers, and description -->
+          <section class="flex-container content">
+            <div class="content c-one">
+
+            </div>
+
+            <div class="content c-two">
+
+            </div>
+
+            <div class="content c-three">
+
+            </div>
+          </section>
+        </div>
+
+        <div class="grid-item" id="resources">
+        <!-- inlcude hyperlinked resources as a list -->
+          <ul class="resources">
+
+          </ul>
+        </div>
+
+        <div class="grid-item">
+        <!-- my name, maybe copyright? -->
+          <p class="footer">Michael Simpson</p>
+        </div>
+      </section> <!-- ends grid-container -->
     </main>
   </body>
 
