imported images, corrected content layout so it can scale.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </ul>
         </div>
 
-        <div class="" id="proposition" name="photo">
+        <div class="" id="proposition">
         <!-- image, "title" area, should include a smaller sub-title, all on top of image -->
           <section class="hero">
             <p id="title">bruce</p>
@@ -51,55 +51,52 @@
 
         <div class="grid_item space" id="top"></div>
 
-        <div class="grid_item" id="reasons">
+        <div class="grid_item reason_container" id="reasons">
         <!-- reasons to be described in depth in "content" -->
-          <section class="flex_container reason_container">
-            <div class="reason r_one">
-              <p class="numReason">1</p>
-              <p class="subReason">#1 personality</p>
-            </div>
+          <div class="reason r_one">
+            <p class="numReason">1</p>
+            <p class="subReason">#1 paws </p>
+          </div>
 
-            <div class="reason r_two">
-              <p class="numReason">2</p>
-              <p class="subReason">#1 belly</p>
-            </div>
+          <div class="reason r_two">
+            <p class="numReason">2</p>
+            <p class="subReason">#1 belly </p>
+          </div>
 
-            <div class="reason r_three">
-              <p class="numReason">3</p>
-              <p class="subReason">#1 cat</p>
-            </div>
-          </section>
+          <div class="reason r_three">
+            <p class="numReason">3</p>
+            <p class="subReason">#1 cat </p>
+          </div>
         </div>
 
         <div class="grid_item space"></div>
 
         <div class="grid_item" id="content">
         <!-- image, reason headers, and description -->
-          <section class="flex_container contents">
-            <section class="content_item image_container">
-              <section class="desc_img" id="img_1"></section>
-              <section class="desc_img" id="img_2"></section>
-              <section class="desc_img" id="img_3"></section>
-            </section>
-
-            <section class="content_item descriptions">
-              <div class="description_container d_one">
-                <p class="text_description">
-                  dolor sit amet, consectetur adipiscing elit. Aliquam euismod metus eu consectetur faucibus. Phasellus varius euismod nunc at ornare. Aliquam erat volutpat. Donec porta enim vitae luctus porttitor.
-                </p>
-              </div>
-              <div class="description_container d_two">
-                <p class="text_description">
-                  Duis scelerisque placerat ante ultrices tempor. Curabitur pharetra volutpat tellus ut iaculis. Etiam sit amet congue elit, at imperdiet eros. Nulla imperdiet bibendum nisi, vel facilisis dolor euismod eget.
-                </p>
-              </div>
-              <div class="description_container d_three">
-                <p class="text_description">
-                  Suspendisse mollis, diam id dictum accumsan, ligula tortor posuere libero, a venenatis magna nibh a risus. Integer et feugiat nisl. Etiam vitae urna facilisis, elementum enim non, consequat dui.
-                </p>
-              </div>
-            </section>
-          </section>
+          <div class="description d_one">
+            <img src="img/16x9-Ratio-Image.jpg" class="image">
+            <div class="description_text_container d_one">
+              <p class="description_text">
+                dolor sit amet, consectetur adipiscing elit. Aliquam euismod metus eu consectetur faucibus. Phasellus varius euismod nunc at ornare. Aliquam erat volutpat. Donec porta enim vitae luctus porttitor.
+              </p>
+            </div>
+          </div>
+          <div class="description d_two">
+            <img src="img/16x9-Ratio-Image.jpg" class="image">
+            <div class="description_text_container d_two">
+              <p class="description_text">
+                Duis scelerisque placerat ante ultrices tempor. Curabitur pharetra volutpat tellus ut iaculis. Etiam sit amet congue elit, at imperdiet eros. Nulla imperdiet bibendum nisi, vel facilisis dolor euismod eget.
+              </p>
+            </div>
+          </div>
+          <div class="description d_three">
+            <img src="img/16x9-Ratio-Image.jpg" class="image">
+            <div class="description_text_container d_three">
+              <p class="description_text">
+                Suspendisse mollis, diam id dictum accumsan, ligula tortor posuere libero, a venenatis magna nibh a risus. Integer et feugiat nisl. Etiam vitae urna facilisis, elementum enim non, consequat dui.
+              </p>
+            </div>
+          </div>
         </div>
 
         <div class="grid_item space" id="bottom"></div>
