Changed content display order, added links.

--- a/index.html
+++ b/index.html
@@ -112,13 +112,15 @@
           <div class="flex_links_container">
             <div class="links_left">
               <ul class="link_lists">
-                <li><a href="https://www.viagenpets.com/product/initiate-cloning/" class="link">clone bruce</a></li>
+                <li><a href="https://www.viagenpets.com/product/initiate-cloning/" class="link">Clone bruce</a></li>
+                <li><a href="https://github.com/simpsom0/COMM329_tribute_page" class="link">GitHub</a></li>
               </ul>
             </div>
 
             <div class="links_right">
               <ul class="link_lists">
-                <li><a href="https://www.tandfonline.com/doi/abs/10.2752/089279399787000237?src=recsys" class="link">cat mental health effects</a></li>
+                <li><a href="https://www.tandfonline.com/doi/abs/10.2752/089279399787000237?src=recsys" class="link">Cat mental health effects</a></li>
+                <li><a href="img/wireframe.jpg" class="link">Project guidelines</a></li>
               </ul>
             </div>
           </div>
