added links to the header

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- class, project -->
           <ul class="h_list">
             <li class="h_list_item">
-              <p><i class="fas fa-arrow-left"></i> Back</p>
+              <a href="https://bit.ly/2WpxM9g" class="h_list_text"><i class="fas fa-arrow-left"></i> Back</a>
             </li>
             <!--
             <li class="h_list_item">
@@ -36,7 +36,7 @@
             </li>
             -->
             <li class="h_list_item">
-              <p>Next <i class="fas fa-arrow-right"></i></p>
+              <a href="https://bit.ly/2WpxM9g" class="h_list_text">Next <i class="fas fa-arrow-right"></i></a>
             </li>
           </ul>
         </div>
@@ -105,22 +105,22 @@
         <!-- inlcude hyperlinked resources as a list -->
           <div class="link_title_container">
             <div class="link_title_div"></div>
-            <p class="link_title">Links</p>
+            <p class="link_title">Resources</p>
             <div class="link_title_div"></div>
           </div>
 
           <div class="flex_links_container">
             <div class="links_left">
               <ul class="link_lists">
-                <li><a href="https://www.viagenpets.com/product/initiate-cloning/" class="link">Clone bruce</a></li>
-                <li><a href="https://github.com/simpsom0/COMM329_tribute_page" class="link">GitHub</a></li>
+                <li class="list_item"><a href="https://www.viagenpets.com/product/initiate-cloning/" class="link">Clone bruce</a></li>
+                <li class="list_item"><a href="https://github.com/simpsom0/COMM329_tribute_page" class="link">GitHub</a></li>
               </ul>
             </div>
 
             <div class="links_right">
               <ul class="link_lists">
-                <li><a href="https://www.tandfonline.com/doi/abs/10.2752/089279399787000237?src=recsys" class="link">Cat mental health effects</a></li>
-                <li><a href="img/wireframe.jpg" class="link">Project guidelines</a></li>
+                <li class="list_item"><a href="https://www.tandfonline.com/doi/abs/10.2752/089279399787000237?src=recsys" class="link">Cat mental health effects</a></li>
+                <li class="list_item"><a href="img/wireframe.jpg" class="link">Project guidelines</a></li>
               </ul>
             </div>
           </div>
