Added quotes, edited quote formatting.

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
 
       <div class="reason r_one">
         <p class="numReason">1</p>
-        <p class="subReason">#1 paws </p>
+        <p class="subReason">#1 P </p>
       </div>
 
       <div class="reason r_two">
         <p class="numReason">2</p>
-        <p class="subReason">#1 belly </p>
+        <p class="subReason">#1 Belly </p>
       </div>
 
       <div class="reason r_three">
         <p class="numReason">3</p>
-        <p class="subReason">#1 cat </p>
+        <p class="subReason">#1 Cat </p>
       </div>
     </div>
     <div class="grid_item space" id="middle"></div>
@@ -109,33 +109,33 @@
       <div class="t_container t_one">
         <p class="quote_icon">"</p>
         <p class="t_quote">
-          Vivamus varius eleifend erat, nec fermentum lacus. Nunc nisi mi, convallis eget risus eget, pharetra pulvinar magna. Donec varius accumsan pretium.
+          I'm not a cat person but Bruce is a good person.
         </p>
-        <p class="t_author"><br>- Person One</p>
+        <p class="t_author"><br>- Anthony S.</p>
       </div>
 
       <div class="t_container t_two">
         <p class="quote_icon">"</p>
         <p class="t_quote">
-          Curabitur id ex mollis dolor congue egestas. Phasellus at maximus velit, ornare gravida enim. Sed eu posuere est. Vivamus id feugiat justo, id hendrerit mi.
+          Bruce, great guy, 19/10 great cat, would pet multiple time.
         </p>
-        <p class="t_author"><br>- Person Two</p>
+        <p class="t_author"><br>- Matt V.</p>
       </div>
 
       <div class="t_container t_three">
         <p class="quote_icon">"</p>
         <p class="t_quote">
-          Nam viverra tristique maximus. Maecenas feugiat volutpat erat, non posuere mi efficitur vitae. Maecenas scelerisque elementum lectus, id efficitur nulla sagittis quis.
+          Bruce has been amazing since kittenhood. From the moment I met him I knew. He was always more than a foster - more than a cat. He's mine. And he is literally the greatest.
         </p>
-        <p class="t_author"><br>- Person Three</p>
+        <p class="t_author"><br>- Shiloh P.</p>
       </div>
 
       <div class="t_container t_four">
         <p class="quote_icon">"</p>
         <p class="t_quote">
-          In a eros in ipsum bibendum eleifend. Aenean eu est quis turpis tincidunt pretium quis nec mi. Etiam vel nulla vitae elit egestas ultrices a eu orci.
+          Bruce is my favorite cat, and I already have a cat.
         </p>
-        <p class="t_author"><br>- Person Four</p>
+        <p class="t_author"><br>- Cat G.</p>
       </div>
 
       <div class="t_container t_five">
