Added media queries, final touches before adding images

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div class="reason r_one">
         <p class="numReason">1</p>
-        <p class="subReason">#1 P </p>
+        <p class="subReason">#1 Paws </p>
       </div>
 
       <div class="reason r_two">
@@ -138,21 +138,6 @@
         <p class="t_author"><br>- Cat G.</p>
       </div>
 
-      <div class="t_container t_five">
-        <p class="quote_icon">"</p>
-        <p class="t_quote">
-          Nam nunc nunc, fringilla in ornare eget, molestie in nibh. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus semper ac metus eget pellentesque.
-        </p>
-        <p class="t_author"><br>- Person Five</p>
-      </div>
-
-      <div class="t_container t_six">
-        <p class="quote_icon">"</p>
-        <p class="t_quote">
-          Vivamus urna ante, sollicitudin eget lectus sed, tristique cursus sem. Proin neque tortor, egestas vel facilisis sed, pulvinar in libero.
-        </p>
-        <p class="t_author"><br>- Person Six</p>
-      </div>
     </div>
     <div class="grid_item space" id="bottom"></div>
 
