--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 
 
     <!-- landing page, image, title, subtitle -->
-    <div class="" id="title_screen">
-      <section class="hero">
-        <p id="title">bruce</p>
-        <p id="subTitle">the biggest man on campus</p>
-      </section>
+    <img src="img/title_1.jpg" id="title_image">
+    <div class="title_text">
+      <p id="title">bruce</p>
+      <p id="subTitle">the biggest man on campus</p>
     </div>
+
     <div class="grid_item space" id="top"></div>
 
 
@@ -64,7 +64,7 @@
 
       <div class="reason r_three">
         <p class="numReason">3</p>
-        <p class="subReason">#1 Cat </p>
+        <p class="subReason">#1 Ally </p>
       </div>
     </div>
     <div class="grid_item space" id="middle"></div>
@@ -74,28 +74,28 @@
     <div class="grid_item" id="content">
 
       <div class="description d_one">
-        <img src="img/16x9-Ratio-Image.jpg" class="image">
+        <img src="img/paw.jpg" class="image">
         <div class="description_text_container d_one">
           <p class="description_text">
-            dolor sit amet, consectetur adipiscing elit. Aliquam euismod metus eu consectetur faucibus. Phasellus varius euismod nunc at ornare. Aliquam erat volutpat. Donec porta enim vitae luctus porttitor.
+            Always willing to give an incredibly soft helping hand. Stories have been told of the pristine biscuits he makes in his free time.
           </p>
         </div>
       </div>
 
       <div class="description d_two">
-        <img src="img/16x9-Ratio-Image.jpg" class="image">
+        <img src="img/belly.jpg" class="image">
         <div class="description_text_container d_two">
           <p class="description_text">
-            Duis scelerisque placerat ante ultrices tempor. Curabitur pharetra volutpat tellus ut iaculis. Etiam sit amet congue elit, at imperdiet eros. Nulla imperdiet bibendum nisi, vel facilisis dolor euismod eget.
+            Bruce owns one of the largest cat bellies in North America. He's constantly looking for his next meal. He's been known to eat anything as long as it is treats.
           </p>
         </div>
       </div>
 
       <div class="description d_three">
-        <img src="img/16x9-Ratio-Image.jpg" class="image">
+        <img src="img/ally.jpg" class="image">
         <div class="description_text_container d_three">
           <p class="description_text">
-            Suspendisse mollis, diam id dictum accumsan, ligula tortor posuere libero, a venenatis magna nibh a risus. Integer et feugiat nisl. Etiam vitae urna facilisis, elementum enim non, consequat dui.
+            He celebrates pride month year round with his many bow ties. Just look at that face, very proper
           </p>
         </div>
       </div>
@@ -117,9 +117,9 @@
       <div class="t_container t_two">
         <p class="quote_icon">"</p>
         <p class="t_quote">
-          Bruce, great guy, 19/10 great cat, would pet multiple time.
+          MWWWOOOOOWOAAWOWOAOOOOWMMWWWWW
         </p>
-        <p class="t_author"><br>- Matt V.</p>
+        <p class="t_author"><br>- Bruce</p>
       </div>
 
       <div class="t_container t_three">
